--- a/index.html
+++ b/index.html
@@ -32,35 +32,35 @@
         <nav>
           <ul id="menu-list">
             <li class="nav-item">
-              <a class="active nav-link" href="#body" data-text="Home">
+              <a class="active nav-link" href="#body" data-text="Trang chủ">
                 Trang chủ
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about" data-text="About"> Về tôi </a>
+              <a class="nav-link" href="#about" data-text="Về tôi"> Về tôi </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services" data-text="Services">
+              <a class="nav-link" href="#services" data-text="Kỹ năng">
                 Kỹ năng
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills" data-text="Skills">
+              <a class="nav-link" href="#skills" data-text="Lập trình">
                 Lập trình
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#experience" data-text="Experience">
+              <a class="nav-link" href="#experience" data-text="Kinh nghiệm">
                 Kinh nghệm
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#works" data-text="Projects">
+              <a class="nav-link" href="#works" data-text="Các dự án">
                 Các dự án
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact" data-text="Contact">
+              <a class="nav-link" href="#contact" data-text="Thông tin liên hệ">
                 Thông tin liên hệ
               </a>
             </li>
